<resources>
    <string name="app_name">DataMagic</string>
    <string name="title_activity_railhelp">apidemo/RailHelpActivity</string>
    <string nmae="title_activity_way_picker">WayPickerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="button_build_graph">Build Graph</string>
    <string name="source_town">Source Town:</string>
    <string name="destination_town">Destination Town:</string>
    <string name="find_a_way">Find a Way</string>
    <string name="find_all_way_by_stop">Find Ways By Stop</string>
    <string name="find_shortest_way">Find Shortest Way</string>
    <string name="find_all_way_by_length">Find Ways By Length</string>
    <string name="folder">Folder</string>
    <string name="parentDirectory">Parent Directory</string>
    <string name="fileSize">File Size</string>
    <string name="currentDir">Current Dir</string>
    <string name="graph1">AB5, BC4, CD8, DC8, DE6, AD5, CE2, EB3, AE7</string>
    <string name="title_activity_way_picker">apidemo/WayPickerActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="from_to">From,(Passing),To:</string>
    <string name="stop_number">Stops:</string>
    <string name="road_length">Length Less Than:</string>
    <string name="menu_item_way">Way</string>
    <string name="menu_item_stop">Stop</string>
    <string name="menu_item_shortest">Shortest</string>
    <string name="menu_item_all">All</string>
    <string name="title_activity_pie">apidemo/PieActivity</string>
    <string name="reset_button">Reset</string>
    <string name="title_activity_stack">apidemo/StackActivity</string>
    <string name="title_activity_magic">MagicActivity</string>
    <string name="title_activity_array_list">ArrayListStack</string>
    <string name="title_activity_launcher">apidemo/Launcher/LauncherActivity</string>
</resources>
